# tab_migrator

./: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
data/: chrome_tabs_backup.json  firefox_tabs_backup.json
extension/: background.js  manifest.json
extension/lib/: clustering.js
extension/sidepanel/: app.js  index.html  styles.css
weft/: cli.py  mcp_server.py
weft/export/: graph.py  similarity.py
