[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weft-graph"
version = "1.3.0"
description = "Local-first knowledge graph for browsing — Louvain clustering, PageRank, Chrome extension, CLI, MCP server"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Avi Solanki"}
]
keywords = [
    "knowledge-graph",
    "tab-manager",
    "chrome-extension",
    "browser-tabs",
    "louvain",
    "pagerank",
    "community-detection",
    "graph-algorithms",
    "clustering",
    "local-first",
    "privacy",
    "mcp",
    "model-context-protocol",
    "tui",
    "obsidian",
    "second-brain",
    "bookmarks",
    "browsing-history",
    "semantic-search",
    "cytoscape",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
    "trafilatura",
    "rich",
    "textual",
    "fastmcp",
    "uvicorn",
    "fastapi",
]

[project.optional-dependencies]
firefox = ["lz4"]
js = ["playwright"]

[project.scripts]
weft = "weft.cli:main"

[project.urls]
Homepage = "https://github.com/Avi-141/weft"
Repository = "https://github.com/Avi-141/weft"

[tool.setuptools.packages.find]
where = ["."]
include = ["weft*"]
